resources/dsaas/launchpad-production/launcher.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    template: launchpad
  name: launchpad
spec:
  host: launch.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: launcher-application
    weight: 100
  wildcardPolicy: None
