resources/dsaas/launchpad-production/launchpad-backend.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: launchpad-backend
  name: launchpad-backend
spec:
  host: forge.api.openshift.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: launcher-backend
    weight: 100
  wildcardPolicy: None
