resources/dsaas/launchpad-production/launchpad.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    template: launchpad
  name: launchpad
spec:
  host: launch.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: launcher-backend
    weight: 100
  wildcardPolicy: None
